# jctest

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: Gemfile  README.md  README_ALTERNATIVES.md  README_API.md  README_BENCHMARK.md  _config.yml  alternatives.md  assertions.md  benchmarks.md  googletest.md  index.html  index.md  index.xml  runtime.md  sitemap.xml  testcases.md
docs/about/: index.html  index.xml
docs/api/: index.html  index.xml
docs/api/01-assertions/: index.html
docs/api/02-testcases/: index.html
docs/api/03-runtime/: index.html
docs/api/customization/: index.html
docs/api/features/: index.html
docs/assets/css/: just-the-docs.scss
docs/benchmarks/: index.html  index.xml
docs/building/: index.html  index.xml
docs/categories/: index.html  index.xml
docs/categories/api/: index.html  index.xml
docs/code/: example_minimal.cpp
docs/css/: custom.css  prism.css  styles.css
docs/examples/: test_example.cpp
docs/main/: index.html  index.xml
docs/tags/: index.html  index.xml
examples/: test_example.cpp
hugo/: README.md  config.toml  optimize_images.sh  publish.sh  serve_local.sh
hugo/content/: about.md
hugo/content/about/: _index.md
hugo/content/api/: 01-assertions.md  02-testcases.md  03-runtime.md  _index.md  customization.md  features.md
hugo/content/benchmarks/: _index.md
hugo/content/building/: _index.md
hugo/content/main/: _index.md
hugo/layouts/: index.html
hugo/layouts/_default/: list.html
hugo/layouts/partials/: footer.html  head.html  header.html  nav.html  social.html
hugo/layouts/shortcodes/: figure.html
hugo/static/code/: example_custom_print.cpp
hugo/static/css/: custom.css
hugo/static/js/: prism.js
scripts/: compile.sh  compile_cl.bat  compile_clang.sh  run_docs.sh  run_tests.bat  run_tests.sh  timeit.py
src/: jc_test.h
test/: main.cpp  minimal.cpp  test_array.cpp  test_color_off.cpp  test_color_on.cpp  test_death.cpp  test_empty.cpp  test_expect.cpp  test_minimal.cpp  test_params.cpp  test_type_traits.cpp  test_typed_test.cpp  testutil.h
test/comparisons/: compile_clang.sh  test_catch2.cpp  test_doctest.cpp  test_greatest.c  test_gtest.cpp  test_jctest.cpp  test_snow.c  test_utest.c
test/doctest/: test_doctest.cpp
